--- a/5B1_cohort/django/blog/main/templates/about.html
+++ b/5B1_cohort/django/blog/main/templates/about.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 
 {% block title %}
 About us
@@ -6,20 +6,27 @@ About us
 
 {% block body %}
 
-<div class="container overflow-hidden">
+
+{% comment %} <div class="container overflow-hidden">
+  {% for student in students %}
     <div class="row gy-5">
       <div class="col-6">
-        <div class="p-3 border bg-light">Custom column padding</div>
-      </div>
-      <div class="col-6">
-        <div class="p-3 border bg-light">Custom column padding</div>
-      </div>
-      <div class="col-6">
-        <div class="p-3 border bg-light">Custom column padding</div>
-      </div>
-      <div class="col-6">
-        <div class="p-3 border bg-light">Custom column padding</div>
+        <div class="p-3 border bg-light"><a href={{ student.get_absolute_url }}>{{ student.name | title }}</a></div>
       </div>
     </div>
-  </div>
-{% endblock body %}
+  {% endfor %}
+</div> {% endcomment %}
+
+{% comment %} <div class="container overflow-hidden">
+  {% for employee in employees %}
+    <div class="row gy-5">
+      <div class="col-6">
+        <div class="p-3 border bg-light"><a href={{ employee.get_absolute_url }}>{{ employee.name | title }}</a></div>
+      </div>
+    </div>
+  {% endfor %}
+</div> {% endcomment %}
+
+  {% comment %} <p>{% load static %}<img src={% static 'image/tech.jpg' %}></p> {% endcomment %}
+
+}
