--- a/5B1_cohort/django/blog/main/templates/base.html
+++ b/5B1_cohort/django/blog/main/templates/base.html
@@ -1,3 +1,4 @@
+{% comment %} {% comment %} {% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,14 +8,24 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>
+    {% comment %} <link rel="stylesheet" href="{% static 'css/style.css' %}" {% endcomment %}
+    
+    {% comment %} <title>
         {% block title %}
             
         {% endblock title %}
     </title>
+
   </head>
   <body>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link {% if section == 'home' %} active {% endif %}" aria-current="page" href="{% url 'homepage' %}">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if section == 'about' %} active {% endif %}" href="{% url 'aboutpage' %}">About</a>
+      </li>
+    </ul>
     {% block body %}
             
     {% endblock body %}
@@ -24,4 +35,4 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
-</html>
+</html> {% endcomment %} 
